--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     "@angular/cli": "~18.1.0",
     "@angular/compiler-cli": "~18.1.0",
     "@angular/language-service": "~18.1.0",
+    "@module-federation/enhanced": "~0.2.3",
+    "@nx/cypress": "19.5.1",
     "@nx/devkit": "19.5.1",
     "@nx/eslint": "19.5.1",
     "@nx/eslint-plugin": "19.5.1",
     "@nx/jest": "19.5.1",
     "@nx/js": "19.5.1",
     "@nx/playwright": "19.5.1",
+    "@nx/web": "19.5.1",
+    "@nx/webpack": "19.5.1",
     "@nx/workspace": "19.5.1",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "~18.1.0",
@@ -45,8 +49,10 @@
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "@typescript-eslint/utils": "^7.16.0",
+    "cypress": "^13.13.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-playwright": "^0.15.3",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
