--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "@ng-mf/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  
+  "scripts": {
+    "nx:build": "nx build",
+    "nx:build:dashboard": "nx build dashboard",
+    "nx:build:login": "nx build login"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~18.1.0",
