--- a/nginx.conf
+++ b/nginx.conf
@@ -36,47 +36,29 @@ http {
         listen       80;
         server_name  localhost;
 
-        #charset koi8-r;
+        location /dashboard/ {
+            alias /opt/homebrew/etc/nginx/html/dist/apps/dashboard/;
+            index index.html;
+            try_files $uri $uri/ /dashboard/index.html;
+        }
 
-        #access_log  logs/host.access.log  main;
+        location /login/ {
+            alias /opt/homebrew/etc/nginx/html/dist/apps/login/;
+            index index.html;
+            try_files $uri $uri/ /login/index.html;
+        }
 
         location / {
-            root   /opt/homebrew/etc/nginx/html;
-            index  index.html index.htm;
+            root /opt/homebrew/etc/nginx/html/dist/apps/dashboard/;
+            try_files $uri $uri/ /dashboard/index.html;
         }
 
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
-            root   html;
+            root   /opt/homebrew/etc/nginx/html;
         }
-
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
     }
+
 
 
     # another virtual host using mix of IP-, name-, and port-based configuration
