changes for nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,99 +1,42 @@
+# Main Nginx configuration file (nginx.conf)
 
-#user  nobody;
-worker_processes  1;
+# Set the user for worker processes
+user nginx;
 
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
+# Set the number of worker processes (auto scales based on CPU cores)
+worker_processes auto;
 
-#pid        logs/nginx.pid;
+# Path to error log file
+error_log /var/log/nginx/error.log warn;
 
+# PID file for the master process
+pid /var/run/nginx.pid;
 
+# Events block to set the number of connections
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
-
+# HTTP block where all the server configurations will go
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
+    # Include the MIME types file
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+    # Define the log format
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log  logs/access.log  main;
+    # Path to access log file
+    access_log /var/log/nginx/access.log main;
 
-    sendfile        on;
-    #tcp_nopush     on;
+    # Enable sendfile to reduce disk I/O
+    sendfile on;
 
-    #keepalive_timeout  0;
-    keepalive_timeout  65;
+    # Timeout for keep-alive connections
+    keepalive_timeout 65;
 
-    #gzip  on;
-
-    server {
-        listen       80;
-        server_name  localhost;
-
-        location /dashboard/ {
-            alias /opt/homebrew/etc/nginx/html/dist/apps/dashboard/;
-            index index.html;
-            try_files $uri $uri/ /dashboard/index.html;
-        }
-
-        location /login/ {
-            alias /opt/homebrew/etc/nginx/html/dist/apps/login/;
-            index index.html;
-            try_files $uri $uri/ /login/index.html;
-        }
-
-        location / {
-            root /opt/homebrew/etc/nginx/html/dist/apps/dashboard/;
-            try_files $uri $uri/ /dashboard/index.html;
-        }
-
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /opt/homebrew/etc/nginx/html;
-        }
-    }
-
-
-
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
-
-    # HTTPS server
-    #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
-
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
-
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
-
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-    include servers/*;
+    # Include all configurations in the conf.d directory
+    include /etc/nginx/conf.d/*.conf;
 }
