--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,17 +8,31 @@ server {
     location /dashboard/ {
         alias /etc/nginx/html/dashboard/;
         try_files $uri $uri/ /dashboard/index.html;
+        # Add cache control headers for static files
+        expires 1d;
+        add_header Cache-Control "public, no-transform";
     }
 
     # Serve the Login application
     location /login/ {
         alias /etc/nginx/html/login/;
         try_files $uri $uri/ /login/index.html;
+        # Add cache control headers for static files
+        expires 1d;
+        add_header Cache-Control "public, no-transform";
     }
 
-    # Error pages
+    # Custom error pages for server errors
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /etc/nginx/html;
+        internal;
+    }
+
+    # Handle other error pages
+    error_page 404 /404.html;
+    location = /404.html {
+        root /etc/nginx/html;
+        internal;
     }
 }
