--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,6 +37,10 @@ http {
     # Timeout for keep-alive connections
     keepalive_timeout 65;
 
+    # Gzip compression for faster transfer
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
     # Include all configurations in the conf.d directory
     include /etc/nginx/conf.d/*.conf;
 }
