--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,25 +1,23 @@
-# Default server configuration (default.conf)
-
 server {
     listen 80;
     server_name localhost;
 
     # Serve the Dashboard application
     location /dashboard/ {
-        alias /etc/nginx/html/dashboard/;
+        alias /var/www/html/dashboard/;
         try_files $uri $uri/ /dashboard/index.html;
-        # Add cache control headers for static files
-        expires 1d;
-        add_header Cache-Control "public, no-transform";
+        expires -1;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        add_header Pragma "no-cache";
     }
 
     # Serve the Login application
     location /login/ {
-        alias /etc/nginx/html/login/;
+        alias /var/www/html/login/;
         try_files $uri $uri/ /login/index.html;
-        # Add cache control headers for static files
-        expires 1d;
-        add_header Cache-Control "public, no-transform";
+        expires -1;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        add_header Pragma "no-cache";
     }
 
     # Custom error pages for server errors
@@ -27,6 +25,9 @@ server {
     location = /50x.html {
         root /etc/nginx/html;
         internal;
+        expires -1;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        add_header Pragma "no-cache";
     }
 
     # Handle other error pages
@@ -34,5 +35,8 @@ server {
     location = /404.html {
         root /etc/nginx/html;
         internal;
+        expires -1;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        add_header Pragma "no-cache";
     }
 }
