baap re baap finally running

--- a/default.conf
+++ b/default.conf
@@ -10,6 +10,13 @@ server {
         try_files $uri $uri/ /dashboard/index.html;
     }
 
+    location /dashboard/assets/ {
+        alias /var/www/html/dashboard/assets/;
+        expires -1;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        access_log off;
+    }
+
     # Serve the Login application
     location /login/ {
         alias /etc/nginx/html/login/;
