--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,6 +11,7 @@ server {
         add_header Pragma "no-cache";
     }
 
+    # Serve the assets for Dashboard correctly
     # Serve the Login application
     location /login/ {
         alias /var/www/html/login/;
