changes for nginx

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,6 +21,14 @@ server {
         add_header Pragma "no-cache";
     }
 
+    # Serve the remoteEntry.mjs for the Login application
+    location /login/remoteEntry.mjs {
+        alias /var/www/html/login/remoteEntry.mjs;
+        types { 
+            application/javascript mjs;
+        }
+    }
+
     # Custom error pages for server errors
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
