tried to add different user

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 # Main Nginx configuration file (nginx.conf)
 
 # Set the user for worker processes
-user nginx;
+user messageUser;
 
 # Set the number of worker processes (auto scales based on CPU cores)
 worker_processes auto;
