broken down into multiple dockerfile

--- a/nginx/nginx-login.conf
+++ b/nginx/nginx-login.conf
@@ -9,6 +9,21 @@ server {
         expires -1;
         add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
         add_header Pragma "no-cache";
+
+        # CORS configuration for production
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:7090';  # Replace with actual domain
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept';
+        add_header 'Access-Control-Allow-Credentials' 'true';  # If cookies or credentials are needed
+
+        # Handle preflight requests
+        if ($request_method = OPTIONS) {
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:7090';  # Replace with actual domain
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept';
+            add_header 'Access-Control-Max-Age' '86400';  # Cache preflight response for 24 hours
+            return 204;
+        }
     }
 
     # Serve the remoteEntry.mjs for the Login application
@@ -17,6 +32,10 @@ server {
         types { 
             application/javascript mjs;
         }
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:7090';  # Replace with actual domain
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept';
+        add_header 'Access-Control-Allow-Credentials' 'true';  # If cookies or credentials are needed
     }
 
     # Custom error pages for server errors
