--- a/nginx/nginx-dashboard.conf
+++ b/nginx/nginx-dashboard.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name aa7719820cb7f4bdf8cae3e3d2e33ceb-362856094.us-east-1.elb.amazonaws.com;
 
     # Serve the Dashboard application
     location /dashboard/ {
