--- a/nginx/nginx-login.conf
+++ b/nginx/nginx-login.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name a95e55e39906b48f0866a4e3d7b239e3-851589780.us-east-1.elb.amazonaws.com;
 
     # Serve the Login application
     location /login/ {
