prod deployment for nginx config

--- a/nginx/nginx-dashboard.conf
+++ b/nginx/nginx-dashboard.conf
@@ -1,6 +1,10 @@
 server {
     listen 80;
-    server_name a5d9ff54ff207418aae9d952e9842203-1255325831.us-east-1.elb.amazonaws.com;
+    server_name a1bbbfdb6e71e4295b646eb7b2137f14-1672741542.us-east-1.elb.amazonaws.com;
+
+    location = /dashboard {
+        return 301 $scheme://$host$uri/;
+    }
 
     # Serve the Dashboard application
     location /dashboard/ {
