--- a/nginx/nginx-login.conf
+++ b/nginx/nginx-login.conf
@@ -1,7 +1,11 @@
 server {
     listen 80;
-    server_name a95e55e39906b48f0866a4e3d7b239e3-851589780.us-east-1.elb.amazonaws.com;
+    server_name a8affbb4c183646a5be5e7ab9533234d-1486215781.us-east-1.elb.amazonaws.com;
 
+
+    location = /login {
+        return 301 $scheme://$host$uri/;
+    }
     # Serve the Login application
     location /login/ {
         alias /var/www/html/login/;
@@ -11,14 +15,14 @@ server {
         add_header Pragma "no-cache";
 
         # CORS configuration for production
-        add_header 'Access-Control-Allow-Origin' 'http://localhost:7090';  # Replace with actual domain
+        add_header 'Access-Control-Allow-Origin' 'http://a1bbbfdb6e71e4295b646eb7b2137f14-1672741542.us-east-1.elb.amazonaws.com';  # Replace with actual domain
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept';
         add_header 'Access-Control-Allow-Credentials' 'true';  # If cookies or credentials are needed
 
         # Handle preflight requests
         if ($request_method = OPTIONS) {
-            add_header 'Access-Control-Allow-Origin' 'http://localhost:7090';  # Replace with actual domain
+            add_header 'Access-Control-Allow-Origin' 'http://a1bbbfdb6e71e4295b646eb7b2137f14-1672741542.us-east-1.elb.amazonaws.com';  # Replace with actual domain
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept';
             add_header 'Access-Control-Max-Age' '86400';  # Cache preflight response for 24 hours
@@ -32,7 +36,7 @@ server {
         types { 
             application/javascript mjs;
         }
-        add_header 'Access-Control-Allow-Origin' 'http://localhost:7090';  # Replace with actual domain
+        add_header 'Access-Control-Allow-Origin' 'http://a1bbbfdb6e71e4295b646eb7b2137f14-1672741542.us-east-1.elb.amazonaws.com';  # Replace with actual domain
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept';
         add_header 'Access-Control-Allow-Credentials' 'true';  # If cookies or credentials are needed
